@@ -11,6 +11,7 @@ Version 1.1.0.1
       to feel sluggish when LotRO is running in the background.
     * The program now attempts to use the key mapping without Ctrl/Alt modifiers if there is an option.
     * Fixed a bug when playing simultaneous notes with Ctrl/Alt modifiers that would cause the wrong note to be played.
+    * Added accelerator keys to Open (Ctrl+O) and Export to ABC (Ctrl+S)
 
 Version 1.1.0.0
     * Added the ability to export to ABC files.
